|Priyanshu + Sreejith + Heera| Update circle ci config to run functional tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,6 +74,7 @@ workflows:
                 sh_file: app_yaml_test.sh
                 requires:
                   - node/test
+          - run_functional_tests
           - approve_for_prod_deploy:
                 type: approval
                 requires:
