--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,19 +68,19 @@ workflows:
         jobs:
           - node/test:
                 version: "13.4"
-          - deploy:
-                name: deploy_test
-                env_name: test
-                sh_file: app_yaml_test.sh
-                requires:
-                  - node/test
-          - run_functional_tests:
-                requires:
-                  - deploy_test
+          # - deploy:
+          #       name: deploy_test
+          #       env_name: test
+          #       sh_file: app_yaml_test.sh
+          #       requires:
+                  # - node/test
+          - run_functional_tests
+                # requires:
+                #   - deploy_test
           - approve_for_prod_deploy:
                 type: approval
-                requires:
-                  - deploy_test
+                # requires:
+                #   - deploy_test
           - deploy:
                 name: deploy_prod
                 env_name: prod
