--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,8 +31,7 @@ jobs:
                 name: Gauge tests
                 command: |
                   sudo apt-get update
-                  sudo apt-get install -y git-all gconf-service libasound2 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgcc1 libgconf-2-4 libgdk-pixbuf2.0-0 libglib2.0-0 libgtk-3-0 libnspr4 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 ca-certificates fonts-liberation libappindicator1 libnss3 lsb-release xdg-utils wget
-                  sudo apt-get install -y libgbm-dev
+                  sudo apt-get install -y git-all gconf-service libasound2 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgcc1 libgconf-2-4 libgdk-pixbuf2.0-0 libglib2.0-0 libgtk-3-0 libnspr4 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 ca-certificates fonts-liberation libgbm-dev libappindicator1 libnss3 lsb-release xdg-utils wget
                   sudo rm -rf /var/lib/apt/lists/*
                   npm run functional_test
     deploy:
@@ -73,19 +72,19 @@ workflows:
         jobs:
           - node/test:
                 version: "13.4"
-          # - deploy:
-          #       name: deploy_test
-          #       env_name: test
-          #       sh_file: app_yaml_test.sh
-          #       requires:
-                  # - node/test
-          - run_functional_tests
-                # requires:
-                #   - deploy_test
+          - deploy:
+               name: deploy_test
+               env_name: test
+               sh_file: app_yaml_test.sh
+               requires:
+                 - node/test
+          - run_functional_tests:
+                 requires:
+                   - deploy_test
           - approve_for_prod_deploy:
                 type: approval
-                # requires:
-                #   - deploy_test
+                requires:
+                   - deploy_test
           - deploy:
                 name: deploy_prod
                 env_name: prod
