--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "helmet": "^3.22.0",
     "jest": "^26.6.3",
     "jquery": "^3.5.1",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-auth0": "^1.4.0",
