--- a/app.yaml
+++ b/app.yaml
@@ -18,6 +18,11 @@ env_variables:
   DB_PASS: ${DB_PASS}
   BUCKET_NAME: ${BUCKET_NAME}
   ENCRYPTION_KEY: ${ENCRYPTION_KEY}
+  AUTH_ISSUER_DOMAIN: ${AUTH_ISSUER_DOMAIN}
+  AUTH0_CLIENT_ID: ${AUTH0_CLIENT_ID}
+  AUTH0_CLIENT_SECRET: ${AUTH0_CLIENT_SECRET}
+  SESSION_SECRET: ${SESSION_SECRET}
+  API_AUDIENCE: ${API_AUDIENCE}
 
 beta_settings:
   cloud_sql_instances: ${DB_HOST}
