--- a/app.yaml
+++ b/app.yaml
@@ -24,6 +24,7 @@ env_variables:
   SESSION_SECRET: ${SESSION_SECRET}
   API_AUDIENCE: ${API_AUDIENCE}
   AUTH0_CALLBACK_URL: ${AUTH0_CALLBACK_URL}
+  AUTH0_ADMIN_LOGIN_URL: ${AUTH0_ADMIN_LOGIN_URL}
 
 beta_settings:
   cloud_sql_instances: ${DB_HOST}
