--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,4 +94,4 @@ workflows:
                 filters:
                   branches:
                     only:
-                      - master
+                      - release
