--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,7 +55,9 @@ jobs:
             - deploy: 
                 name: Deploy app to GAE
                 command: |
-                  if [[ << parameters.env_name >> == "test" ]]; then
+                  if [[ << parameters.env_name >> == "dev" ]]; then
+                    gcloud app deploy app.yaml -v devversion --no-promote
+                  elif [[[ << parameters.env_name >> == "test" ]]; then
                     gcloud app deploy app.yaml -v somerandom --no-promote
                   else
                     gcloud app deploy app.yaml
@@ -74,11 +76,21 @@ workflows:
           - node/test:
                 version: "13.4"
           - deploy:
+               name: deploy_dev
+               env_name: dev
+               sh_file: app_yaml_dev.sh
+               requires:
+                 - node/test
+          - approve_for_prod_deploy:
+                type: approval
+                requires:
+                   - deploy_dev
+          - deploy:
                name: deploy_test
                env_name: test
                sh_file: app_yaml_test.sh
                requires:
-                 - node/test
+                 - deploy_dev
           - run_functional_tests:
                  requires:
                    - deploy_test
