--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,6 +82,7 @@ workflows:
                requires:
                  - node/test
           - approve_for_prod_deploy:
+                name: test_deploy
                 type: approval
                 requires:
                    - deploy_dev
@@ -90,11 +91,12 @@ workflows:
                env_name: test
                sh_file: app_yaml_test.sh
                requires:
-                 - deploy_dev
+                 - test_deploy
           - run_functional_tests:
                  requires:
                    - deploy_test
           - approve_for_prod_deploy:
+                name: wait_for_prod_deploy
                 type: approval
                 requires:
                    - deploy_test
@@ -103,7 +105,7 @@ workflows:
                 env_name: prod
                 sh_file: app_yaml_prod.sh
                 requires:
-                  - approve_for_prod_deploy
+                  - wait_for_prod_deploy
                 filters:
                   branches:
                     only:
