--- a/migrations/config/migration_config.json
+++ b/migrations/config/migration_config.json
@@ -1,5 +1,39 @@
 {
-    "db": {
+    "dev": {
+        "driver": "pg",
+        "user": {
+            "ENV": "DB_USER"
+        },
+        "password": {
+            "ENV": "DB_PASS"
+        },
+        "host": {
+            "ENV": "DB_HOST"
+        },
+        "database": {
+            "ENV": "DEV_DB_NAME"
+        },
+        "port": "5432",
+        "schema": "public"
+    },
+    "test": {
+        "driver": "pg",
+        "user": {
+            "ENV": "DB_USER"
+        },
+        "password": {
+            "ENV": "DB_PASS"
+        },
+        "host": {
+            "ENV": "DB_HOST"
+        },
+        "database": {
+            "ENV": "TEST_DB_NAME"
+        },
+        "port": "5432",
+        "schema": "public"
+    },
+    "prod": {
         "driver": "pg",
         "user": {
             "ENV": "DB_USER"
