--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "ENCRYPTION_KEY=CjksSAhoncsuosuy68sbLd35KkcHrSuwKJerEFCEWof= jest",
     "gulp": "gulp",
     "functional_test": "cd functional_tests && npm i && gauge run specs/Vakyansh.spec",
-    "db-migrate": "node node_modules/db-migrate/bin/db-migrate up -e db --config migrations/config/migration_config.json"
+    "db-migrate": "npx db-migrate up --config migrations/config/migration_config.json"
   },
   "repository": {
     "type": "git",
