--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,10 +82,12 @@ jobs:
             - run:
                 name: Run DB Migrate
                 command: |
-                    echo $DEV_DB_USER
                     npm run db-migrate -- -e <<parameters.env_name>>
                 environment:
-                  DEV_DB_USER: test_user
+                  DB_USER: $DB_USER
+                  DB_PASS: $DB_PASS
+                  DB_HOST: $DB_HOST
+                  DEV_DB_NAME: $DEV_DB_NAME
                 
 
 workflows:
