--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -104,7 +104,7 @@ jobs:
                 name: Run DB Migrate
                 command: npx db-migrate up
                 environment:
-                  DATABASE_URL: postgresql://${DEV_DB_USER}:${DEV_DB_PASS}@localhost/${DEV_DB_NAME}
+                  DATABASE_URL: postgresql://${DEV_DB_USER}:${DEV_DB_PASS}@127.0.0.1/${DEV_DB_NAME}
                 
 workflows:
     build_test_deploy:
