--- a/functional_tests/env/test/user.properties
+++ b/functional_tests/env/test/user.properties
@@ -1,4 +1,4 @@
 # user.properties
 
 # URL used in testing specs
-test_url = https://test-dot-ekstepspeechrecognition.el.r.appspot.com/
+test_url = https://test.vakyansh.in/
