--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@getgauge/cli": "^1.1.7",
     "@google-cloud/storage": "^4.7.0",
+    "aws-sdk": "^2.851.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "crypto-js": "^4.0.0",
