--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -117,7 +117,7 @@ workflows:
         jobs:
           - aws-ecr/build-and-push-image:
                 repo: ${REPO}
-                tag: "latest"
+                tag: "latest,test"
           - node/test:
                 version: "13.4"
           - db_migrate:
