--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,14 @@ commands:
                 command: |
                   rm ${HOME}/gcp-key.json
                   rm app.yaml
+
+    delete_dockerfile:
+      steps:
+        - run:
+          name: Remove docker file
+          command: |
+            rm Dockerfile
+
 jobs:
     run_functional_tests:
         executor:
@@ -53,6 +61,8 @@ jobs:
                   gcloud --quiet config set project ${GCP_PROJECT}
             - create_yaml:
                 file: <<parameters.sh_file>>
+                
+            - delete_dockerfile 
             - deploy: 
                 name: Deploy app to GAE
                 command: |
@@ -117,6 +127,7 @@ workflows:
         jobs:
           - aws-ecr/build-and-push-image:
                 repo: ${REPO}
+                tag: "test,prod"
           - node/test:
                 version: "13.4"
           - db_migrate:
