Add build step for aws

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -162,9 +162,10 @@ jobs:
           - run:
               command: |
                  aws eks --region ap-south-1 update-kubeconfig --name << parameters.cluster-name >>
+                 echo ${HOME}
                  ls;
                  pwd;
-                 kubectl apply -f deployments/k8s/deployment.yaml -n << parameters.env-name >>
+                 kubectl apply -f /home/circleci/project/deployments/k8s/deployment.yaml -n << parameters.env-name >>
                  kubectl get pods
               name: Test cluster
 
