--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -149,6 +149,7 @@ jobs:
             type: string
           
         steps:
+          - checkout
           - run:
               command: |
                 echo $ << parameters.cluster-name >>
