--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -165,7 +165,7 @@ jobs:
                  ls;
                  ls -al;
                  aws eks --region ap-south-1 update-kubeconfig --name << parameters.cluster-name >>
-                 ENV_IMAGE_NAME=${REPO}:<< parameters.env-name >>
+                 ENV_IMAGE_NAME=${AWS_ECR_ACCOUNT_URL}/${REPO}:<< parameters.env-name >>
                  sed -e "s|IMAGE_NAME|$ENV_IMAGE_NAME|g" ${HOME}/project/deployments/k8s/deployment.yaml | kubectl -n << parameters.env-name >> apply  -f -
 
                 #  ls project
